--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-  "engines":{
+  "engines": {
     "npm": "3.8.6",
-    "node":"6.0.0"
+    "node": "6.0.0"
   },
   "dependencies": {
     "aws-sdk": "^2.56.0",
     "body-parser": "~1.15.1",
+    "bufferutil": "^3.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
